--- a/src/app/admin/sidebar/sidebar.component.html
+++ b/src/app/admin/sidebar/sidebar.component.html
@@ -161,13 +161,13 @@
                     <mat-icon> local_offer </mat-icon>
                     <span>Sale Report </span>
                 </button>              
-                <button mat-button class="menu-button" [routerLink]="['purchase_cancel']" routerLinkActive="active">
+                <!-- <button mat-button class="menu-button" [routerLink]="['purchase_cancel']" routerLinkActive="active">
                     <mat-icon> cancel </mat-icon>
                     <span>Purchase Cancel </span>
                 </button>
                 <button mat-button class="menu-button" [routerLink]="['sale_cancel']" routerLinkActive="active">
                     <mat-icon> cancel </mat-icon>
                     <span>Sale Cancel </span>
-                </button>
+                </button> -->
             </div>
         </div>
