--- a/src/app/admin/add-edit-product/add-edit-product.component.html
+++ b/src/app/admin/add-edit-product/add-edit-product.component.html
@@ -31,7 +31,7 @@
 
             <mat-form-field appearance="fill">
                 <mat-label>Unit</mat-label>
-                <mat-select formControlName="unit_id_fk">
+                <mat-select formControlName="unit_id_fk" (valueChange)="getUnit($event)">
                     <mat-option *ngFor="let unitdata of unitdata"
                         [value]="unitdata.unit_id">{{unitdata.unit_name}}</mat-option>
                 </mat-select>
@@ -53,18 +53,18 @@
         </div>
         <div class="column" id="column_1">
             <mat-form-field appearance="fill">
-                <mat-label>Production Cost</mat-label>
-                <input formControlName="product_produ_cost" matInput placeholder="produ Cost" type="number">
+                <mat-label>Production Cost {{unit_add}} </mat-label>
+                <input formControlName="product_produ_cost" matInput placeholder="produ Cost {{unit_add}}" type="number">
             </mat-form-field>
 
             <mat-form-field appearance="fill">
-                <mat-label>Product Price</mat-label>
-                <input formControlName="product_cost_price" matInput placeholder="Cost Price" type="number">
+                <mat-label>Product Price {{unit_add}}</mat-label>
+                <input formControlName="product_cost_price" matInput placeholder="Cost Price {{unit_add}}" type="number">
             </mat-form-field>
 
             <mat-form-field appearance="fill">
-                <mat-label>Retail Price</mat-label>
-                <input formControlName="product_retail_price" matInput placeholder="Retail Price" type="number">
+                <mat-label>Retail Price {{unit_add}}</mat-label>
+                <input formControlName="product_retail_price" matInput placeholder="Retail Price {{unit_add}}" type="number">
             </mat-form-field>
             <input formControlName="admin_id_fk" type="number" ngModel={{admin_id}} readonly hidden>
         </div>
