--- a/src/app/employee/emp-login/emp-login.component.html
+++ b/src/app/employee/emp-login/emp-login.component.html
@@ -1,5 +1,5 @@
 <div id="wrapper">
-    <div style="float: right;"><button mat-raised-button class="up_btn" routerLink="/admin" >Admin Login</button></div>
+    <div style="float: right;"><button mat-raised-button class="up_btn" routerLink="/login" >Admin Login</button></div>
     <mat-card class="example-card">
         <mat-card-header>
           Employee Login
