--- a/src/app/employee/emp-login/emp-login.component.html
+++ b/src/app/employee/emp-login/emp-login.component.html
@@ -1,9 +1,11 @@
 <div id="wrapper">
     <div style="float: right;"><button mat-raised-button class="up_btn" routerLink="/login" >Admin Login</button></div>
     <mat-card class="example-card">
+        <br>
         <mat-card-header>
           Employee Login
         </mat-card-header>
+        <br>
         <mat-card-content>
                 <mat-icon class="icon_1">account_circle</mat-icon>
 
@@ -25,7 +27,7 @@
         </mat-card-content>
         <mat-card-actions>
             <button mat-button (click)="onLogin()">Login</button>
-        </mat-card-actions>
+        </mat-card-actions><br><br>
         <p>Forgot Password</p>
       </mat-card>
       
