--- a/src/app/admin/add-edit-account/add-edit-account.component.css
+++ b/src/app/admin/add-edit-account/add-edit-account.component.css
@@ -7,7 +7,8 @@
     .column mat-form-field {
         width: 90%;
     }
-    .full_txtbox{
+
+    .full_txtbox {
         width: 96%;
     }
 
@@ -27,35 +28,48 @@
         margin-bottom: 20px;
     }
 
+
     .date_box {
-        width: 200px;
+        width: 180px;
+        border: none;
+        border-radius: 3px 3px 0px 0px;
+        color: gray;
+        border-bottom: 1px solid gray;
+        background-color: #f5f5f5;
+        padding: 0px 10px 0px 10px;
+        height: 52px;
+
     }
-   .column_1 mat-form-field {
+
+    .column_1 mat-form-field {
         width: 382px;
     }
-    #main_button{
+
+    #main_button {
         width: 190px;
         margin: auto;
-      }
-      .reset_btn {
+    }
+
+    .reset_btn {
         float: left;
         width: 80px;
         height: 40px;
-      
-      }
-      
-      .add_btn {
+
+    }
+
+    .add_btn {
         width: 80px;
         height: 40px;
         float: right;
         background-color: green;
         color: white;
-      } 
-      .full_txtbox mat-form-field {
+    }
+
+    .full_txtbox mat-form-field {
         width: 100vw;
         margin-top: 22px;
-      }
-      
+    }
+
     mat-toolbar {
         height: 40px;
         background: none;
@@ -78,7 +92,8 @@
         .column mat-form-field {
             width: 100%;
         }
-        .column_1 mat-form-field{
+
+        .column_1 mat-form-field {
             width: 100%;
         }
     }
